<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ln_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/txt_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/txt_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="VisualLintLongText" />
            </LinearLayout>

        </ScrollView>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/bt_previous"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#28CDBE"
                android:text="@string/txt_previous"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="#28CDBE"
                android:text="@string/txt_next"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_drawer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="VisualLintBounds">
        <!--phải để layout_gravity để có thể xác định vị trí ngăn kéo-->

        <ScrollView
            android:id="@+id/sc_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/ln_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize" />

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>